# qBatchCutROI

./: CMakeLists.txt  a.rc  main.cpp  qdicethread.cpp  readme.md  widget.cpp  widget.h  widget.ui
SRC/: qdicethread.h  resource.qrc  widget.cpp
